# Agricolab

./: Makefile  README.md  docker-compose.yml
backend-llm/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  Makefile  README.md  requirements.txt  start.sh
backend-llm/app/: main.py
backend-llm/app/core/: ollama_client.py  settings.py
backend-llm/app/schemas/: chat.py  embed.py
backend-llm/app/schemes/: rag_model.py
backend-llm/tests/: conftest.py  test_chat.py  test_embed.py  test_health.py
data-config/: .env  Dockerfile.etl  requirements.txt
data-config/data/sources/: sources.csv
data-config/scripts/: pipeline.py  utils.py
data-config/scripts/steps/: chunk.py  clean.py  download.py  embed_load.py  extract.py
data-engineering/: Dockerfile.etl  Makefile  docker-compose.yml  requirements.txt
data-engineering/scripts/: cronjob.txt  utils.py
data-engineering/scripts/steps/: chunk.py  download.py  embed_load.py  extract.py
embedding_utils/: .env  README.md  pyproject.toml
embedding_utils/embedding_utils/: __init__.py  embedder.py
embedding_utils/tests/: test_embedder.py
front_proyecto/: README.md  pubspec.yaml
front_proyecto/android/app/: build.gradle.kts
front_proyecto/ios/Runner/: Info.plist
front_proyecto/ios/Runner.xcodeproj/: project.pbxproj
front_proyecto/lib/: main.dart
front_proyecto/lib/models/: chat.dart  message.dart
front_proyecto/linux/: CMakeLists.txt
front_proyecto/test/: widget_test.dart
front_proyecto/web/: index.html  manifest.json
front_proyecto/windows/: CMakeLists.txt
(+22 files in other folders)
